--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "dependencies": {
     "axios": "^0.17.1",
     "express": "^4.16.3",
-    "pg": "^7.4.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "pg": "^7.4.3",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.0",
+    "react-scripts": "^1.1.0",
     "redux": "^4.0.0"
   },
   "devDependencies": {
